# view_shapenet_partseg

./: CMakeLists.txt  README.md
src/: create_shapenet_partseg_from_linemod_main.cpp  create_shapenet_partseg_from_linemod_test_02_main.cpp  create_shapenet_partseg_from_linemod_test_main.cpp  read_gt_to_matrix_main.cpp  test.cpp  view_gt_of_02_as_shapenet_partseg.cpp  view_shapenet-partseg_main.cpp  view_test_main.cpp
